samples/_failures_safe/1761412293_7e8705_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4802463.c: In function ‘main’:
./samples/SAFE/__tmp_b4802463.c:133:12: error: missing terminating " character
  133 |     printf("
      |            ^
./samples/SAFE/__tmp_b4802463.c:133:5: error: expected expression at end of input
  133 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b4802463.c:133:5: error: expected declaration or statement at end of input
